# miden-sourcify

./: .gitignore  README.md  docker-compose.yml  miden-sourcify-prd.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api-compile/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/api-compile-cloudflare/: package.json  worker-configuration.d.ts  wrangler.jsonc
apps/api-compile-cloudflare/src/: server.ts
apps/api-compile/__tests__/: compile.test.ts
apps/api-compile/crates/miden-package-metadata/: Cargo.toml
apps/api-compile/project-template/counter-account/: Cargo.toml
apps/api-compile/project-template/counter-account/.cargo/: config.toml
apps/api-compile/project-template/counter-account/src/: lib.rs
apps/api-compile/project-template/increment-note/src/: lib.rs
apps/api-compile/src/: server.ts
apps/api-compile/src/lib/: cargo-miden.ts  compile.ts  miden-package-metadata.ts  types.ts  utils.ts
docker/: docker-compose.yml
docker/compiler/: Dockerfile
docker/compiler/api/: package-lock.json  package.json  server.ts  tsconfig.json  vitest.config.ts
docker/compiler/api/__tests__/: compile.test.ts
docker/compiler/api/lib/: utils.ts
docker/compiler/crates/miden-package-metadata/src/: main.rs
docker/compiler/project-template/counter-account/: rust-toolchain.toml
docker/compiler/project-template/increment-note/: Cargo.toml
